Added Tab Saver and solved bug #1

--- a/Project3_ChromeExtension/style.css
+++ b/Project3_ChromeExtension/style.css
@@ -57,3 +57,12 @@ li {
 li a {
     color: whitesmoke;
 }
+
+#deleteButton {
+    background-color: red;
+}
+
+#saveTabButton {
+    background-color: darkorange;
+    color: white;
+}
